Add IEAPEnv stuff - libjpeg62-dev for aarch64.

--- a/buildenv/docker/jdk11/aarch64_CC/arm-linux-aarch64/Dockerfile
+++ b/buildenv/docker/jdk11/aarch64_CC/arm-linux-aarch64/Dockerfile
@@ -63,6 +63,7 @@ RUN apt-get update \
     vim-tiny \
     wget \
     zip \
+    libjpeg62-dev \
   && rm -rf /var/lib/apt/lists/*
 
 # Create links for c++,g++,cc,gcc
