Add libxi-dev for multi-touch support.

--- a/buildenv/docker/jdk11/x86_64/ubuntu18/Dockerfile
+++ b/buildenv/docker/jdk11/x86_64/ubuntu18/Dockerfile
@@ -48,6 +48,7 @@ RUN apt-get update \
     libxrender-dev \
     libxt-dev \
     libxtst-dev \
+    libxi-dev \
     make \
     nasm \
     pkg-config \
